// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blockquote renders correctly 1`] = `
.c0 {
  font-style: italic;
  margin-bottom: clamp(2.074rem,4.44vw,2.488rem);
  margin-left: 0;
  margin-right: 0;
  margin-top: clamp(2.074rem,4.44vw,2.488rem);
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0 p {
  margin-bottom: clamp( 0.833rem,1.78vw,1.0rem);
}

.c0 p:first-child::before {
  content: open-quote;
  font-style: normal;
}

.c0 p:nth-of-type(1):first-letter {
  margin-left: -0.4em;
}

.c0[lang|='de'] p:nth-of-type(1):first-letter {
  margin-left: -0.6em;
}

.c0[lang|='ja'] p:nth-of-type(1):first-letter {
  margin-left: -1em;
}

.c0 p:nth-last-of-type(1)::after {
  content: close-quote;
  font-style: normal;
}

.c1 {
  font-size: clamp(1.00rem,1.1vw,1.25rem);
}

<blockquote
  class="c0"
  lang="en"
>
  <p>
    Flying is learning how to throw yourself at the ground and miss.
  </p>
  <footer
    class="c1"
  />
</blockquote>
`;

exports[`Blockquote with German language renders correctly 1`] = `
.c0 {
  font-style: italic;
  margin-bottom: clamp(2.074rem,4.44vw,2.488rem);
  margin-left: 0;
  margin-right: 0;
  margin-top: clamp(2.074rem,4.44vw,2.488rem);
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0 p {
  margin-bottom: clamp( 0.833rem,1.78vw,1.0rem);
}

.c0 p:first-child::before {
  content: open-quote;
  font-style: normal;
}

.c0 p:nth-of-type(1):first-letter {
  margin-left: -0.4em;
}

.c0[lang|='de'] p:nth-of-type(1):first-letter {
  margin-left: -0.6em;
}

.c0[lang|='ja'] p:nth-of-type(1):first-letter {
  margin-left: -1em;
}

.c0 p:nth-last-of-type(1)::after {
  content: close-quote;
  font-style: normal;
}

.c1 {
  font-size: clamp(1.00rem,1.1vw,1.25rem);
}

<blockquote
  class="c0"
  lang="de"
>
  <p>
    Keine Zeit für Pessimismus.
  </p>
  <footer
    class="c1"
  />
</blockquote>
`;

exports[`Blockquote with Japanese language renders correctly 1`] = `
.c0 {
  font-style: italic;
  margin-bottom: clamp(2.074rem,4.44vw,2.488rem);
  margin-left: 0;
  margin-right: 0;
  margin-top: clamp(2.074rem,4.44vw,2.488rem);
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0 p {
  margin-bottom: clamp( 0.833rem,1.78vw,1.0rem);
}

.c0 p:first-child::before {
  content: open-quote;
  font-style: normal;
}

.c0 p:nth-of-type(1):first-letter {
  margin-left: -0.4em;
}

.c0[lang|='de'] p:nth-of-type(1):first-letter {
  margin-left: -0.6em;
}

.c0[lang|='ja'] p:nth-of-type(1):first-letter {
  margin-left: -1em;
}

.c0 p:nth-last-of-type(1)::after {
  content: close-quote;
  font-style: normal;
}

.c1 {
  font-size: clamp(1.00rem,1.1vw,1.25rem);
}

<blockquote
  class="c0"
  lang="ja"
>
  <p>
    悲観の時間がない。
  </p>
  <footer
    class="c1"
  />
</blockquote>
`;

exports[`Blockquote with author and source renders correctly 1`] = `
.c0 {
  font-style: italic;
  margin-bottom: clamp(2.074rem,4.44vw,2.488rem);
  margin-left: 0;
  margin-right: 0;
  margin-top: clamp(2.074rem,4.44vw,2.488rem);
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0 p {
  margin-bottom: clamp( 0.833rem,1.78vw,1.0rem);
}

.c0 p:first-child::before {
  content: open-quote;
  font-style: normal;
}

.c0 p:nth-of-type(1):first-letter {
  margin-left: -0.4em;
}

.c0[lang|='de'] p:nth-of-type(1):first-letter {
  margin-left: -0.6em;
}

.c0[lang|='ja'] p:nth-of-type(1):first-letter {
  margin-left: -1em;
}

.c0 p:nth-last-of-type(1)::after {
  content: close-quote;
  font-style: normal;
}

.c1 {
  font-size: clamp(1.00rem,1.1vw,1.25rem);
}

.c2 {
  font-style: normal;
}

<blockquote
  class="c0"
  lang="en"
>
  <p>
    Flying is learning how to throw yourself at the ground and miss.
  </p>
  <footer
    class="c1"
  >
    —
    <b
      class="c2"
    >
      Douglas Adams
    </b>
    , 
    <cite
      class=""
    >
      The Hichhikers Guide to the Galaxy
    </cite>
  </footer>
</blockquote>
`;

exports[`Blockquote with author renders correctly 1`] = `
.c0 {
  font-style: italic;
  margin-bottom: clamp(2.074rem,4.44vw,2.488rem);
  margin-left: 0;
  margin-right: 0;
  margin-top: clamp(2.074rem,4.44vw,2.488rem);
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0 p {
  margin-bottom: clamp( 0.833rem,1.78vw,1.0rem);
}

.c0 p:first-child::before {
  content: open-quote;
  font-style: normal;
}

.c0 p:nth-of-type(1):first-letter {
  margin-left: -0.4em;
}

.c0[lang|='de'] p:nth-of-type(1):first-letter {
  margin-left: -0.6em;
}

.c0[lang|='ja'] p:nth-of-type(1):first-letter {
  margin-left: -1em;
}

.c0 p:nth-last-of-type(1)::after {
  content: close-quote;
  font-style: normal;
}

.c1 {
  font-size: clamp(1.00rem,1.1vw,1.25rem);
}

.c2 {
  font-style: normal;
}

<blockquote
  class="c0"
  lang="en"
>
  <p>
    Flying is learning how to throw yourself at the ground and miss.
  </p>
  <footer
    class="c1"
  >
    —
    <b
      class="c2"
    >
      Douglas Adams
    </b>
  </footer>
</blockquote>
`;

exports[`Blockquote with author, source and URL renders correctly 1`] = `
.c3 {
  color: var(--colorText);
  font-weight: 600;
  -webkit-text-decoration-color: var(--colorLink);
  text-decoration-color: var(--colorLink);
  -webkit-text-decoration-thickness: 0.1em;
  text-decoration-thickness: 0.1em;
  text-underline-offset: 0.1em;
}

.c3:hover,
.c3:focus {
  -webkit-text-decoration-color: var(--colorLinkActive);
  text-decoration-color: var(--colorLinkActive);
}

.c0 {
  font-style: italic;
  margin-bottom: clamp(2.074rem,4.44vw,2.488rem);
  margin-left: 0;
  margin-right: 0;
  margin-top: clamp(2.074rem,4.44vw,2.488rem);
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0 p {
  margin-bottom: clamp( 0.833rem,1.78vw,1.0rem);
}

.c0 p:first-child::before {
  content: open-quote;
  font-style: normal;
}

.c0 p:nth-of-type(1):first-letter {
  margin-left: -0.4em;
}

.c0[lang|='de'] p:nth-of-type(1):first-letter {
  margin-left: -0.6em;
}

.c0[lang|='ja'] p:nth-of-type(1):first-letter {
  margin-left: -1em;
}

.c0 p:nth-last-of-type(1)::after {
  content: close-quote;
  font-style: normal;
}

.c1 {
  font-size: clamp(1.00rem,1.1vw,1.25rem);
}

.c2 {
  font-style: normal;
}

@supports (not (text-decoration-color:red)) {
  .c3:hover,
  .c3:focus {
    color: var(--colorLink);
  }
}

<blockquote
  class="c0"
  lang="en"
>
  <p>
    Many forms of Government have been tried, and will be tried in this world of sin and woe. No one pretends that democracy is perfect or all-wise. Indeed, it has been said that democracy is the worst form of government except all those other forms that have been tried from time to time.
  </p>
  <footer
    class="c1"
  >
    —
    <b
      class="c2"
    >
      Winston Churchill
    </b>
    , 
    <cite
      class=""
    >
      <a
        class="c3"
        href="https://api.parliament.uk/historic-hansard/commons/1947/nov/11/parliament-bill"
      >
        Speech to the House of Commons
      </a>
    </cite>
  </footer>
</blockquote>
`;

exports[`Blockquote with multiple paragraphs between paragraphs renders correctly 1`] = `
.c0 {
  font-size: clamp(1.00rem,1.1vw,1.25rem);
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1.6;
  margin-bottom: clamp(2.074rem,4.44vw,2.488rem);
  margin-top: 0;
}

<p
  class="c0"
>
  Lorem ipsum dolor amet shoreditch tbh butcher 90's portland, keytar street art. Pork belly you probably haven't heard of them ethical post-ironic hella, cray kale chips fashion axe chillwave shabby chic man bun slow-carb unicorn. Live-edge intelligentsia tumblr quinoa man braid. Hexagon disrupt echo park brunch direct trade four dollar toast chartreuse, drinking vinegar wolf bushwick pork belly. Vexillologist sartorial literally venmo blog. Tumblr you probably haven't heard of them bitters swag waistcoat af. Deep v helvetica blog, paleo cardigan seitan kombucha normcore.
</p>
`;

exports[`Blockquote with multiple paragraphs renders correctly 1`] = `
.c0 {
  font-style: italic;
  margin-bottom: clamp(2.074rem,4.44vw,2.488rem);
  margin-left: 0;
  margin-right: 0;
  margin-top: clamp(2.074rem,4.44vw,2.488rem);
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0 p {
  margin-bottom: clamp( 0.833rem,1.78vw,1.0rem);
}

.c0 p:first-child::before {
  content: open-quote;
  font-style: normal;
}

.c0 p:nth-of-type(1):first-letter {
  margin-left: -0.4em;
}

.c0[lang|='de'] p:nth-of-type(1):first-letter {
  margin-left: -0.6em;
}

.c0[lang|='ja'] p:nth-of-type(1):first-letter {
  margin-left: -1em;
}

.c0 p:nth-last-of-type(1)::after {
  content: close-quote;
  font-style: normal;
}

.c1 {
  font-size: clamp(1.00rem,1.1vw,1.25rem);
}

.c2 {
  font-style: normal;
}

<blockquote
  class="c0"
  lang="en"
>
  <p>
    When you first rise in the morning tell yourself:
  </p>
  <p>
    I will encounter busybodies, ingrates, egomaniacs, liars, the jealous and cranks. They are all stricken with these afflictions because they don’t know the difference between good and evil.
  </p>
  <p>
    Because I have understood the beauty of good and the ugliness of evil, I know that these wrong-doers are still akin to me … and that none can do me harm, or implicate me in ugliness—nor can I be angry at my relatives or hate them. For we are made for cooperation.
  </p>
  <footer
    class="c1"
  >
    —
    <b
      class="c2"
    >
      Marcus Aurelius
    </b>
    , 
    <cite
      class=""
    >
      Meditations, 2.1
    </cite>
  </footer>
</blockquote>
`;

exports[`Blockquote with source and URL renders correctly 1`] = `
.c2 {
  color: var(--colorText);
  font-weight: 600;
  -webkit-text-decoration-color: var(--colorLink);
  text-decoration-color: var(--colorLink);
  -webkit-text-decoration-thickness: 0.1em;
  text-decoration-thickness: 0.1em;
  text-underline-offset: 0.1em;
}

.c2:hover,
.c2:focus {
  -webkit-text-decoration-color: var(--colorLinkActive);
  text-decoration-color: var(--colorLinkActive);
}

.c0 {
  font-style: italic;
  margin-bottom: clamp(2.074rem,4.44vw,2.488rem);
  margin-left: 0;
  margin-right: 0;
  margin-top: clamp(2.074rem,4.44vw,2.488rem);
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0 p {
  margin-bottom: clamp( 0.833rem,1.78vw,1.0rem);
}

.c0 p:first-child::before {
  content: open-quote;
  font-style: normal;
}

.c0 p:nth-of-type(1):first-letter {
  margin-left: -0.4em;
}

.c0[lang|='de'] p:nth-of-type(1):first-letter {
  margin-left: -0.6em;
}

.c0[lang|='ja'] p:nth-of-type(1):first-letter {
  margin-left: -1em;
}

.c0 p:nth-last-of-type(1)::after {
  content: close-quote;
  font-style: normal;
}

.c1 {
  font-size: clamp(1.00rem,1.1vw,1.25rem);
}

@supports (not (text-decoration-color:red)) {
  .c2:hover,
  .c2:focus {
    color: var(--colorLink);
  }
}

<blockquote
  class="c0"
  lang="en"
>
  <p>
    Many forms of Government have been tried, and will be tried in this world of sin and woe. No one pretends that democracy is perfect or all-wise. Indeed, it has been said that democracy is the worst form of government except all those other forms that have been tried from time to time.
  </p>
  <footer
    class="c1"
  >
    —
    <cite
      class=""
    >
      <a
        class="c2"
        href="https://api.parliament.uk/historic-hansard/commons/1947/nov/11/parliament-bill"
      >
        Speech to the House of Commons
      </a>
    </cite>
  </footer>
</blockquote>
`;

exports[`Blockquote with source renders correctly 1`] = `
.c0 {
  font-style: italic;
  margin-bottom: clamp(2.074rem,4.44vw,2.488rem);
  margin-left: 0;
  margin-right: 0;
  margin-top: clamp(2.074rem,4.44vw,2.488rem);
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0 p {
  margin-bottom: clamp( 0.833rem,1.78vw,1.0rem);
}

.c0 p:first-child::before {
  content: open-quote;
  font-style: normal;
}

.c0 p:nth-of-type(1):first-letter {
  margin-left: -0.4em;
}

.c0[lang|='de'] p:nth-of-type(1):first-letter {
  margin-left: -0.6em;
}

.c0[lang|='ja'] p:nth-of-type(1):first-letter {
  margin-left: -1em;
}

.c0 p:nth-last-of-type(1)::after {
  content: close-quote;
  font-style: normal;
}

.c1 {
  font-size: clamp(1.00rem,1.1vw,1.25rem);
}

<blockquote
  class="c0"
  lang="en"
>
  <p>
    Flying is learning how to throw yourself at the ground and miss.
  </p>
  <footer
    class="c1"
  >
    —
    <cite
      class=""
    >
      The Hichhikers Guide to the Galaxy
    </cite>
  </footer>
</blockquote>
`;
